# pre-commit-hooks

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
pre_commit_hooks/: __init__.py  coverage_badge.py  coverage_html_report.py
tests/: .coverage  __init__.py  test_coverage_badge.py
