[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pre_commit_hooks"
version = "0.1.5"
description = "My pre commit hooks"
authors = ["Oleksandr Kolodkin <alexandr.kolodkin@gmail.com>"]
homepage = "https://github.com/pre-commit/pre-commit-hooks"
repository = "https://github.com/pre-commit/pre-commit-hooks.git"
readme = "README.md"
include = ["LICENSE", "README.md"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]
packages = [
	{include = "pre_commit_hooks"},
	{include = "tests", format = "sdist"},
	{include = "poetry.lock", format = "sdist"},
	{include = "poetry.toml", format = "sdist"},
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
coverage = "^6.4.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"
black = "^22.6.0"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.poetry.scripts]
coverage-badge = "pre_commit_hooks.coverage_badge:main"
